using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string jump = "jump";
    internal static string death = "death";
    internal static string shoot = "shoot";
    internal static string hurt = "hurt";
    internal static string hurtShake = "hurtShake";
    internal static string sHurt = "sugar_hurt";
    internal static string sDeath = "sugar_death";
}

